Add font style and postcard video

--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
                     </h3>
                 </div>
             </div>
+
+            <div id="yt-video">
+                <div id="yt-video-card1"></div>
+                <div id="yt-video-card2"></div>
+                <div id="yt-video-card3"></div>
+            </div>
+
             <div class="result">
                 <div id="result-header">
                     <p>
